--- a/examples/index.html
+++ b/examples/index.html
@@ -6,13 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AR Button Examples</title>
 
-    <script
-      data-consolejs-channel="c5a07390-ce1a-ec12-1a39-5cbe18e10f6e"
-      src="https://remotejs.com/agent/agent.js"
-    ></script>
-
-    <script type="module" src="../index.js"></script>
-    <script defer type="module" src="index.js"></script>
+    <script src="../index.js" type="module"></script>
+    <script src="index.js" type="module"></script>
 
     <link rel="stylesheet" href="../styles.css" />
   </head>
@@ -46,6 +41,6 @@
     </ar-button>
 
     <h3>Manual init</h3>
-    <ar-button id="deferred-initialization">View in you space</ar-button>
+    <ar-button id="ar-button-3" deferred>View in you space</ar-button>
   </body>
 </html>
