refactor uri encoding for arguments

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AR Button Examples</title>
 
-    <script src="../index.js" type="module"></script>
+    <script src="../main.js" type="module"></script>
     <script src="index.js" type="module"></script>
 
     <link rel="stylesheet" href="../styles.css" />
