add backward compatibility for missing ios-link attribute

--- a/examples/index.html
+++ b/examples/index.html
@@ -25,14 +25,14 @@
       id="my-ar-button"
       src="https://github.com/leoncvlt/ar-button/raw/master/assets/Astronaut.glb"
       ios-src="https://github.com/leoncvlt/ar-button/raw/master/assets/Astronaut.usdz"
-      title="Ajouter au panier"
-      link="https://www.jardiland.com/jardiland_checkout/wonderpartner/?sku=2001242"
-      checkout-title="Œuf Poket"
-      checkout-subtitle="Naturel – H.197 cm"
-      price="334,95€"
-      ios-link="https://www.jardiland.com/jardiland_checkout/wonderpartner/?sku=2001242"
-      call-to-action="Ajouter au panier"
-      canonical-web-page-url="https://www.jardiland.com/fauteuil-oeuf-suspendu-pliant-poket-naturel-h-197-cm-2001242.html"
+      title="Buy"
+      link="https://google.com"
+      ios-link="https://facebook.com"
+      checkout-title="Astronaut"
+      checkout-subtitle="Looks rad!"
+      price="$100"
+      call-to-action="Buy"
+      canonical-web-page-url="https://google.com"
       allows-content-scaling="0"
       occlusion
     >
