add ipad pro compatibility and ar quick look availability check

--- a/examples/index.html
+++ b/examples/index.html
@@ -41,5 +41,7 @@
 
     <h3>Manual init</h3>
     <ar-button id="ar-button-3" deferred>View in you space</ar-button>
+
+    <p id="quick-look-compatibility"></p>
   </body>
 </html>
