fix ar compatibility on chrome iOS

--- a/examples/index.html
+++ b/examples/index.html
@@ -62,5 +62,6 @@
     <ar-button id="emptyARButton" allows-content-scaling="0">View in your space</ar-button>
 
     <p id="quick-look-compatibility"></p>
+    <p id="chrome-based-browser"></p>
   </body>
 </html>
